src/test/ui/const-generics/issues/issue-67739.full.stderr
error: unconstrained generic constant
  --> $DIR/issue-67739.rs:11:15
   |
LL |         [0u8; mem::size_of::<Self::Associated>()];
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); mem::size_of::<Self::Associated>()]:`

error: aborting due to previous error

